terraform/alb.tf
resource "aws_lb" "app" {
  name               = "devops-alb"
  internal           = false
  load_balancer_type = "application"

  subnets         = [
      aws_subnet.public.id,
      aws_subnet.public_2.id
  ]

  security_groups = [aws_security_group.ecs_sg.id]
}

resource "aws_lb_target_group" "app" {
  name     = "devops-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.main.id

  target_type = "ip"

  health_check {
    path                = "/health"
    interval            = 30
    timeout             = 5
    healthy_threshold   = 2
    unhealthy_threshold = 2
  }
}

resource "aws_lb_listener" "app" {
  load_balancer_arn = aws_lb.app.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}
